2013-03-18  James Hunt  <james.hunt@ubuntu.com>

	* configure.ac: Added scripts/data/Makefile.
	* scripts/Makefile.am: Added SUBDIRS=data.
	* scripts/data/Makefile.am: New Makefile.
	* scripts/data/upstart-monitor.desktop: Desktop file for
	  upstart-monitor.

2013-03-13  James Hunt  <james.hunt@ubuntu.com>

	* scripts/man/upstart-monitor.8: New manpage.
	* scripts/upstart-monitor.py: New cli+gui tool to monitor
	  Upstart events.
	* scripts/Makefile.am: Updated for upstart-monitor.

2013-03-04  James Hunt  <james.hunt@ubuntu.com>

	* init/session.c: session_from_dbus(): Fixed off-by-one
	  readlink error.
	* configure.ac: Only add sbin to path if exec_prefix specified
	  (LP: #1122510).
	* NEWS: Release 1.7
	* configure.ac (NIH_COPYRIGHT): Update

2013-02-27  James Hunt  <james.hunt@ubuntu.com>

	* Removal of gcc 'malloc' function attribute resulting from
	  a clarification in its description which makes its use invalid.
	  (LP: #1123588).

2013-02-26  James Hunt  <james.hunt@ubuntu.com>

	* util/tests/test_initctl.c: test_upstart_open(): Unset
	  UPSTART_SESSION to avoid session-init environment affecting
	  test run.

2013-02-15  James Hunt  <james.hunt@ubuntu.com>

	* util/tests/test_initctl.c:
	  - timed_waitpid(): Back off if no status change.
	  - test_quiesce():
	    - Set XDG_RUNTIME_DIR to a temporary value.
	    - Remove stale session files.
	  - test_job_env(): Remove stale session files.

2013-02-15  James Hunt  <james.hunt@ubuntu.com>

	* init/event_operator.c: Typo.
	* init/job_class.c:
	  - job_class_environment_reset(): Comments.
	  - job_class_environment_set(): Apply to all running job objects too.
	  - job_class_environment_unset(): Apply to all running job objects too.
	* util/man/initctl.8: Updated on environment command semantics.
	* util/tests/test_initctl.c: test_global_and_local_job_env(): Modified
	  test for new semantics.
2013-02-15  James Hunt  <james.hunt@ubuntu.com>

	* init/job_process.c: job_process_run(): Invert meaning.